--- a/Othello-client/Othello-server-client/Othello-server-client.vcxproj
+++ b/Othello-client/Othello-server-client/Othello-server-client.vcxproj
@@ -155,15 +155,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ClientNetwork.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="NetworkServices.cpp" />
     <ClCompile Include="Rules.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ClientNetwork.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="NetworkServices.h" />
     <ClInclude Include="Rules.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
